# GameOfLife

./: .gitignore  Bitfield.hs  GameOfLife.cabal  GameOfLife.hs  README.md  World.hs  glidergun.txt  spaceships.txt
